--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.gethalfpint</groupId>
   <artifactId>dropwizard-views-jade</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>${dropwizard.version}-1</version>
   <packaging>jar</packaging>
 
   <name>dropwizard-views-jade</name>
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <dropwizard.version>0.9.1</dropwizard.version>
   </properties>
 
   <build>
@@ -25,6 +26,30 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>  <!-- Create sources.jar -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -32,7 +57,7 @@
     <dependency>
       <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-views</artifactId>
-      <version>0.9.1</version>
+      <version>${dropwizard.version}</version>
     </dependency>
     <dependency>
       <groupId>de.neuland-bfi</groupId>
